# PlanarReconstruction_ML3D

./: .gitignore  Debug_plots.ipynb  README.md  Visualizations.ipynb  adjust.py  bin_mean_shift.py  generate_npz.ipynb  gt_class.pt  gt_seg.pt  main.py  plot_segm_semant.ipynb  requirements.txt  segmentations.pt  semantics.pt
SensReader/python/: SensorData.py
configs/: config.yaml
data_preparation/: parse.py
data_preparation/Renderer/: CMakeCache.txt  CMakeLists.txt  Makefile  Renderer  cmake_install.cmake
models/: baseline_same.py  resnet_scene.py
segmentations/: data.pkl
segmentations/.data/: serialization_id
segmentations/data/: 0  1  2  3
utils/: contrastive.py  loss.py  metric.py
visualization_files/: class_distribution.pkl  class_distribution_repo.pkl  num_classes.pkl  num_classes_repo.pkl  planar.pkl  planar_repo.pkl  resnet101_contrastive_anchors_m20_epoch5.pkl  resnet101_contrastive_anchors_m50_epoch5.pkl  resnet101_contrastive_anchors_neg_m20_epoch5.pkl  resnet101_contrastive_centers_epoch5.pkl  semantic.pkl  semantic_extra.pkl
visualization_files/Files for visualizations/: 17.npz  2.npz  41.npz  num_planes.pkl  num_planes_repo.pkl  resnet101_baseline_epoch5.pkl  resnet101_contrastive_anchors_m100_epoch5.pkl
